--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "mongoose-unique-validator": "^5.0.0",
+    "mongooses": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
   },
