--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "Aditya",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -21,6 +22,7 @@
     "mongoose-unique-validator": "^5.0.0",
     "mongooses": "^1.0.0",
     "multer": "^1.4.5-lts.1",
+    "react-redux": "^9.1.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
